Add bound service implemented with Binder

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1,4 +1,5 @@
 <resources><string-array name="activity_services">
 <item>audio player</item>
+<item>bound binder</item>
 </string-array>
 </resources>
