add a bound service implemented with Messager

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1,5 +1,6 @@
 <resources><string-array name="activity_services">
 <item>audio player</item>
 <item>bound binder</item>
+<item>bound messager</item>
 </string-array>
 </resources>
