Add IntentService demo, which is unbound service with a task queue, and will stop itself when no task to do.

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -2,5 +2,6 @@
 <item>audio player</item>
 <item>bound binder</item>
 <item>bound messager</item>
+<item>unbound intent</item>
 </string-array>
 </resources>
