Add a general unbound service, which is similar to AudioPlayer Demo. onStart is deprecated, use onStartCommand

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -3,5 +3,6 @@
 <item>bound binder</item>
 <item>bound messager</item>
 <item>unbound intent</item>
+<item>unbound general</item>
 </string-array>
 </resources>
